--- a/postgres_producer/Makefile
+++ b/postgres_producer/Makefile
@@ -1,6 +1,15 @@
-bin_name=main
+bin_name=stream_test_postgres_producer
+pid_file=$(bin_name).pid
 
+.IGNORE: stop
+
+all: build start
+
+clean:
+	rm *.log
 build:
 	go build -o $(bin_name)
-run: build
-	./$(bin_name) "stream_config.yaml"
+start:
+	./$(bin_name) "stream_config.yaml" &
+stop:
+	@pkill -F $(pid_file) 2> /dev/null
