--- a/ui/package.json
+++ b/ui/package.json
@@ -16,7 +16,10 @@
     "svelte": "^3.0.0"
   },
   "dependencies": {
+    "moment": "^2.27.0",
     "sirv-cli": "^0.4.4",
+    "svelte-calendar": "^1.5.0",
+    "vis-data": "^6.6.1",
     "vis-timeline": "^7.3.7"
   }
 }
